--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,28 +1,26 @@
-video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+body {
+    background-color: lightgray;
 }
 
-.mirror-mode{
-    -ms-transform: scaleX(-1);
-    -moz-transform: scaleX(-1);
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
+p {
+    position: relative;
+    font-size: 24px;
+    left: 190px;
 }
+.btn {
+    position: relative;
+    left: 180px;
 
-.pointer{
-    cursor: pointer;
 }
-
 .row {
     position:relative;
-    width: 300px;
+    width: 200px;
     height: 150px;
     padding-bottom: 40px;
 }
 .remote-video{
-    display: flex;
+    position: relative;
+    left: 94px;
     height: 175px;
     width: 300px;
     padding-top: 15px;
@@ -30,24 +28,8 @@ video {
 }
 
 .local-video{
-    display: flex;
+    position: relative;
+    left: 94px;
     height: 175px;
     width: 300px; 
 }
-
-body {
-    text-align: center;
-    width: 300px; 
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: rgb(29, 99, 122);
-}
-
-
-
-
-
-
-
