--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,26 +1,28 @@
-body {
-    background-color: lightgray;
+video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-p {
-    position: relative;
-    font-size: 24px;
-    left: 190px;
+.mirror-mode{
+    -ms-transform: scaleX(-1);
+    -moz-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
 }
-.btn {
-    position: relative;
-    left: 180px;
 
+.pointer{
+    cursor: pointer;
 }
+
 .row {
     position:relative;
-    width: 200px;
+    width: 300px;
     height: 150px;
     padding-bottom: 40px;
 }
 .remote-video{
-    position: relative;
-    left: 94px;
+    display: flex;
     height: 175px;
     width: 300px;
     padding-top: 15px;
@@ -28,8 +30,24 @@ p {
 }
 
 .local-video{
-    position: relative;
-    left: 94px;
+    display: flex;
     height: 175px;
     width: 300px; 
 }
+
+body {
+    text-align: center;
+    width: 300px; 
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgb(29, 99, 122);
+}
+
+
+
+
+
+
+
